--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.table-con{
+	width:auto;
+	margin:0 auto;
+}
+
 .imgForCards{
   width: auto;
   height: 200px;
@@ -9,6 +14,4 @@ img.details{
   width: 33%;
   margin: 15px auto;
 }
-.mysidebar{
-  
-}
+
